// Vitest Snapshot v1

exports[`GridOptionsProvider > should provide grid options 1`] = `
{
  "columnDefs": [],
  "components": {
    "AdaptableToolPanel": [Function],
  },
  "enableRangeSelection": true,
  "sideBar": true,
  "suppressMenuHide": true,
}
`;

exports[`GridOptionsProvider should provide grid options 1`] = `
Object {
  "columnDefs": Array [],
  "components": Object {
    "AdaptableToolPanel": [Function],
  },
  "enableRangeSelection": true,
  "sideBar": true,
  "suppressMenuHide": true,
}
`;
